tablegen/tests/snapshots/snapshot_codegen__abi_constants_external_scanner.snap
---
source: tablegen/tests/snapshot_codegen.rs
assertion_line: 1138
expression: output
---
version = 15u32
symbol_count = 7usize
token_count = 2u32
external_token_count = EXTERNAL_TOKEN_COUNT
state_count = 4u32
