tablegen/tests/snapshots/snapshot_codegen__abi_constants_minimal.snap
---
source: tablegen/tests/snapshot_codegen.rs
assertion_line: 1066
expression: output
---
version = 15u32
symbol_count = 5usize
alias_count = 0
token_count = 3u32
external_token_count = EXTERNAL_TOKEN_COUNT
state_count = 3u32
large_state_count = 0u32
production_id_count = 1u32
field_count = 0u32
max_alias_sequence_length = 0
