tablegen/tests/snapshots/snapshot_codegen__expr_compressed_action_table.snap
---
source: tablegen/tests/snapshot_codegen.rs
expression: output
---
row_offsets: [0, 1, 3, 4, 6, 7]
default_actions: [Error, Error, Error, Error, Error]
entries:
  [0] symbol=1, action=Shift(StateId(1))
  [1] symbol=2, action=Shift(StateId(2))
  [2] symbol=3, action=Reduce(RuleId(0))
  [3] symbol=1, action=Shift(StateId(3))
  [4] symbol=2, action=Reduce(RuleId(1))
  [5] symbol=3, action=Reduce(RuleId(1))
  [6] symbol=3, action=Accept
