tablegen/tests/snapshots/snapshot_codegen__expr_node_types_json.snap
---
source: tablegen/tests/snapshot_codegen.rs
assertion_line: 883
expression: json
---
[
  {
    "type": "expression",
    "named": true,
    "children": {
      "multiple": false,
      "required": true,
      "types": []
    }
  },
  {
    "type": "number",
    "named": true
  }
]
