tablegen/tests/snapshots/snapshot_codegen__external_scanner_node_types.snap
---
source: tablegen/tests/snapshot_codegen.rs
assertion_line: 940
expression: json
---
[
  {
    "type": "block",
    "named": true,
    "children": {
      "multiple": false,
      "required": true,
      "types": []
    }
  },
  {
    "type": "identifier",
    "named": true
  },
  {
    "type": "INDENT",
    "named": true
  },
  {
    "type": "DEDENT",
    "named": true
  },
  {
    "type": "NEWLINE",
    "named": true
  }
]
